# sl-1-2-reflection-based-lidar-object-model

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DISCLAIMER  LICENSE  README.md  install_cmake_ubuntu_3-12.md  install_model_Win64_MSYS-2020.md  install_model_Win64_VS2017.md  install_protobuf_Win64_VS2017.md  reflection_based_lidar_model_Ibeo_Lux_2010.srmd  reflection_based_lidar_model_SCALA_1.srmd  reflection_based_lidar_model_Velodyne_VLP32.srmd
src/model/: CMakeLists.txt  README.md  model_name.conf
src/model/include/: README.md  sequence.cpp.in  sequence.hpp  strategy.hpp
src/model/profiles/: README.md  init_profile.cpp.in  init_profile.hpp.in  profile.hpp.in  profile_Blickfeld.hpp.in  profile_Ibeo_LUX_2010.hpp.in  profile_SCALA_1.hpp.in  profile_VLP16.hpp.in  profile_VLP32.hpp.in  profile_list.conf  profile_list.hpp
src/model/strategies/: README.md  bin_output_sequence.conf  csv_output_sequence.conf  pcd_output_sequence.conf  sequence.conf
src/model/strategies/binary-sensordata-output-strategy/: CMakeLists.txt  CONTRIBUTING.md  README.md
src/model/strategies/binary-sensordata-output-strategy/include/osibinsensordataoutput/: OSIBinSensorDataOutput.hpp  set_bin_file_path_sensordata.cpp.in
src/model/strategies/binary-sensordata-output-strategy/src/: OSIBinSensorDataOutput.cpp
src/model/strategies/binary-sensorview-output-strategy/: CMakeLists.txt  README.md
src/model/strategies/binary-sensorview-output-strategy/include/osibinsensorviewoutput/: OSIBinSensorViewOutput.hpp  set_bin_file_path_sensorview.cpp.in
src/model/strategies/binary-sensorview-output-strategy/src/: OSIBinSensorViewOutput.cpp
src/model/strategies/csv-output-detectedobjects-strategy/: CMakeLists.txt  README.md
src/model/strategies/csv-output-detectedobjects-strategy/include/csvoutputdetectedobjects/: CsvOutputDetectedObjects.hpp  set_csv_file_path_detectedobjects.cpp.in
src/model/strategies/csv-output-detectedobjects-strategy/src/: CsvOutputDetectedObjects.cpp
src/model/strategies/csv-output-detections-strategy/: CMakeLists.txt  README.md
src/model/strategies/csv-output-detections-strategy/include/csvoutputdetections/: CsvOutputDetections.hpp  set_csv_file_path_detections.cpp.in
src/model/strategies/csv-output-detections-strategy/src/: CsvOutputDetections.cpp
src/model/strategies/csv-output-gtobjects-strategy/: CMakeLists.txt  README.md
src/model/strategies/csv-output-gtobjects-strategy/include/csvoutputgtobjects/: CsvOutputGTObjects.hpp  set_csv_file_path_gtobjects.cpp.in
src/model/strategies/csv-output-gtobjects-strategy/src/: CsvOutputGTObjects.cpp
src/model/strategies/csv-output-logicaldetections-strategy/: CMakeLists.txt  README.md
src/model/strategies/csv-output-logicaldetections-strategy/include/csvoutputlogicaldetections/: CsvOutputLogicalDetections.hpp  set_csv_file_path_logicaldetections.cpp.in
src/model/strategies/csv-output-logicaldetections-strategy/src/: CsvOutputLogicalDetections.cpp
src/model/strategies/lidar-detection-sensing-strategy/: CMakeLists.txt  README.md  profile_Blickfeld.hpp.in  profile_Ibeo_LUX_2010.hpp.in  profile_SCALA_1.hpp.in  profile_VLP16.hpp.in  profile_VLP32.hpp.in  profile_struct.hpp.in
src/model/strategies/lidar-detection-sensing-strategy/include/detectionsensing/: DetectionSensing.hpp
src/model/strategies/lidar-detection-sensing-strategy/src/: .clang-format  DetectionSensing.cpp
src/model/strategies/lidar-environmental-effects-strategy/: CMakeLists.txt  README.md  profile_Blickfeld.hpp.in  profile_Ibeo_LUX_2010.hpp.in  profile_SCALA_1.hpp.in  profile_VLP16.hpp.in  profile_VLP32.hpp.in  profile_struct.hpp.in
src/model/strategies/lidar-environmental-effects-strategy/src/: DetectionEnvironmentalEffects.cpp
src/model/strategies/lidar-pointcloud-fusion-strategy/: CMakeLists.txt  README.md
src/model/strategies/lidar-pointcloud-fusion-strategy/src/: PointcloudFusion.cpp
src/model/strategies/lidar-segmentation-strategy/: CMakeLists.txt  README.md  profile_Blickfeld.hpp.in  profile_Ibeo_LUX_2010.hpp.in  profile_ReflectionRadar.hpp.in  profile_SCALA_1.hpp.in  profile_VLP16.hpp.in  profile_VLP32.hpp.in  profile_struct.hpp.in
src/model/strategies/lidar-segmentation-strategy/src/: Segmentation.cpp
src/model/strategies/lidar-tracking-strategy/: CMakeLists.txt  README.md  profile_Blickfeld.hpp.in  profile_Ibeo_LUX_2010.hpp.in  profile_LongRange_Radar.hpp.in  profile_MidRange_Radar.hpp.in  profile_ReflectionRadar.hpp.in  profile_SCALA_1.hpp.in  profile_VLP16.hpp.in  profile_VLP32.hpp.in  profile_struct.hpp.in
src/model/strategies/lidar-tracking-strategy/include/tracking/: Tracking.hpp
src/model/strategies/lidar-tracking-strategy/src/: Tracking.cpp
src/model/strategies/pcd-output-detections-strategy/: CMakeLists.txt  README.md
src/model/strategies/pcd-output-detections-strategy/src/: PcdOutputDetections.cpp
src/model/strategies/pcd-output-logicaldetections-strategy/: CMakeLists.txt  README.md
src/model/strategies/pcd-output-logicaldetections-strategy/src/: PcdOutputLogicalDetections.cpp
src/model/strategies/ros-output-detectedobjects-strategy/: CMakeLists.txt  README.md  package.xml
src/model/strategies/ros-output-detectedobjects-strategy/src/: ros_detectedobjects.cpp
src/model/strategies/ros-output-detections-strategy/: CMakeLists.txt  README.md  package.xml
src/model/strategies/ros-output-detections-strategy/src/: ros_detections.cpp
src/model/strategies/ros-output-gtobjects-strategy/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/model/strategies/ros-output-gtobjects-strategy/src/: ros_gt_objects.cpp
src/model/strategies/ros-output-logicaldetections-strategy/: CMakeLists.txt  CONTRIBUTING.md  README.md
src/model/strategies/ros-output-logicaldetections-strategy/src/: ros_logicaldetections.cpp
src/model/strategies/transformation-functions/: README.md  TransformationFunctions.cpp  TransformationFunctions.hpp
src/osmp/: CMakeLists.txt  FrameworkPackaging.cpp  FrameworkPackaging.h  README.md  modelDescription.in.xml  variableNamingConvention.conf
(+34 files in other folders)
